# lipvm

./: .gitignore  README.md  pyproject.toml  tmp.logo
backend/: Environment.py  LipVM.py  interpreter.py  parser.py
backend/instructions/: SetLineNumber.py
languages/minilogo/: Compiler.py  LanguageInterpreter.py  LanguageVisitorImpl.py
languages/minilogo/examples/: example.logo  examplewithloop.logo  minilogo-langium.logo
languages/minilogo/ide/: Minilogo.py
languages/minilogo/syntax/: LanguageVisitor.py  LanguageVisitorImpl.py  LanguageVisitorSteps.py
languages/sysml/: Language.g4  Language.interp  Language.tokens  LanguageLexer.interp  LanguageLexer.py  LanguageParser.py  LanguageVisitor.py
lesp/: README.md  __init__.py  server.py
lesp-extension/: .vscodeignore  PACKAGING.md  README.md  lesp-runner-0.0.1.vsix  package-lock.json  package.json
lesp-extension/src/: extension.ts  visualizationPanel.ts  vmClient.ts
tests/: interpreter_tests.py
